--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,6 +106,7 @@ flutter:
     - assets/images/Icon material-account-circle.png
     - assets/images/Icon awesome-calendar-alt.png
     - assets/images/Icon feather-home.png
+    - assets/images/Icon ionic-md-contact.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
